syntax = "proto3";

package pb;

import "barber/appointments.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";


message CreateAppointmentsRequest{
    string barber_shop_id = 1;
    string customer_id = 2;
    string barber_id = 3;
    repeated string service_id = 4;
    google.protobuf.Timestamp appointment_date_time = 5;
    int32 status = 6;
}

message CreateAppointmentsResponse {
    Appointments appointment = 1;
    repeated string services = 2;
}