syntax = "proto3";

package pb;
import "barber/barber.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";


message LoginBarberRequest{
    string username = 1;
    string password = 2;
    string fcm_device = 3;
}

message LoginBarberResponse {
    AuthenticationBarber barber = 1;
}
